Revert "[FIX] Issue: Background color changes in the dark mode #3"
This reverts commit ef4b33fc28702b578ed244159ee95a3782412e98.

--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -218,8 +218,8 @@
 
 /* Background Dark */
 .bg-dark {
-	background-color: #e9ecef  !important;
-  }
+	background-color: #111418 !important;
+}
 
 .bg-dark-1 {
 	background-color: $gray-900 !important;
